--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "rollup-plugin-babel": "^4.3.2",
     "vue": "^2.5.17"
   },
   "devDependencies": {
