--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.4.0",
   "description": "",
   "main": "build/context-menu-plugin.common.js",
+  "file": [
+    "build/"
+    ],
   "module": "build/context-menu-plugin.esm.js",
   "scripts": {
     "build": "rete --build rete.config.js",
